<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="label_dado_cliente">Dados do cliente</string>
    <string name="label_escolha">Escolha a(s) pizza(s)</string>
    <string name="hint_nome_cliente">Informe o nome do cliente</string>
    <string name="label_tamanho_da_pizza">Tamanho da pizza</string>
    <string name="label_pequena">Pequena</string>
    <string name="label_media">Média</string>
    <string name="label_grande">Grande</string>
    <string name="label_forma_de_pagamento">Forma de Pagamento</string>

    <string name="credito">Cartão de Crédito</string>
    <string name="debito">Cartão de Débito</string>
    <string name="vr">Vale Refeição</string>
    <string name="fiado">Fiado</string>
    <string name="cupom">Cupom</string>
    <string name="string_botao_calcular">Calcular</string>

    <string name="saudacao">Olá %1$s. Vamos ligar para o número %2$s</string>
</resources>
