<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.main.MainActivity">

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_dado_cliente" />

        <TextView
            android:id="@+id/tvNome"
            style="@style/margin_lateral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            tools:text="Fulano da Silva" />

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_escolha" />

        <LinearLayout style="@style/container_horizontal">

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="Atum" />

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="Bacon" />

        </LinearLayout>

        <LinearLayout style="@style/container_horizontal">

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="Mussarela" />

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="Calabresa" />

        </LinearLayout>

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_tamanho_da_pizza" />

        <RadioGroup
            style="@style/margin_lateral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_pequena" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_media" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_grande" />
        </RadioGroup>

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_forma_de_pagamento" />

        <Spinner
            style="@style/margin_lateral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formas_pagamento"></Spinner>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botao_personalizado"
            android:text="@string/string_botao_calcular"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>